# program

./: .gitignore  ANALYSIS_AND_PROMPT.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Compile_Error_06_03_2026  README.md  index.html  vcpkg.json
.github/workflows/: build-windows.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  crypto_trader  test_features  test_indicators  test_risk
config/: Config.ini  profiles.json  settings.json
resources/: app_resource.rc
src/: main.cpp
src/ai/: FeatureExtractor.cpp  FeatureExtractor.h  OnlineLearningLoop.cpp  OnlineLearningLoop.h  RLTradingAgent.cpp  RLTradingAgent.h  SPSCQueue.h
src/alerts/: AlertManager.cpp  AlertManager.h
src/automation/: GridBot.cpp  GridBot.h  Scheduler.cpp  Scheduler.h
src/backtest/: BacktestEngine.cpp  BacktestEngine.h
src/core/: Engine.cpp  Engine.h  EventBus.cpp  EventBus.h  Logger.cpp  Logger.h
src/data/: AlertRepository.cpp  AlertRepository.h  AuxRepository.cpp  AuxRepository.h  BacktestRepository.cpp  BacktestRepository.h  CSVExporter.cpp  CSVExporter.h  CandleCache.cpp  CandleCache.h  CandleData.h  DataFeed.cpp  DataFeed.h  DatabaseMaintenance.cpp  DatabaseMaintenance.h  DatabaseMigrator.cpp  DatabaseMigrator.h  DrawingRepository.cpp  DrawingRepository.h  EquityRepository.cpp  EquityRepository.h  ExchangeDB.cpp  ExchangeDB.h  HistoricalLoader.cpp  HistoricalLoader.h  OrderRepository.cpp  OrderRepository.h  PositionRepository.cpp  PositionRepository.h  TradeRepository.cpp  TradeRepository.h  TradingDatabase.cpp  TradingDatabase.h
src/exchange/: BinanceExchange.cpp  BinanceExchange.h  BitgetExchange.cpp  BitgetExchange.h  BybitExchange.cpp  BybitExchange.h  DepthStream.cpp  DepthStream.h  EndpointManager.h  IExchange.h  KuCoinExchange.cpp  KuCoinExchange.h  OKXExchange.cpp  OKXExchange.h  SymbolFormatter.cpp  SymbolFormatter.h  WebSocketClient.cpp  WebSocketClient.h
src/indicators/: ATR.cpp  ATR.h  EMA.cpp  EMA.h  IIndicator.h  IndicatorEngine.cpp  IndicatorEngine.h  PineConverter.cpp  PineConverter.h  PineScriptIndicator.cpp  PineScriptIndicator.h  PineVisuals.cpp  PineVisuals.h  RSI.cpp  RSI.h  UserIndicatorManager.cpp  UserIndicatorManager.h  VWAPIndicator.h
src/integration/: TelegramBot.cpp  TelegramBot.h  WebhookServer.cpp  WebhookServer.h
src/ml/: FeatureExtractor.cpp  FeatureExtractor.h  LSTMModel.cpp  LSTMModel.h  MLModel.h  ModelTrainer.cpp  ModelTrainer.h  SignalEnhancer.cpp  SignalEnhancer.h  XGBoostModel.cpp  XGBoostModel.h
src/scanner/: MarketScanner.cpp  MarketScanner.h
src/security/: KeyVault.cpp  KeyVault.h
src/strategy/: IStrategy.h  MLEnhancedStrategy.cpp  MLEnhancedStrategy.h  PositionCalc.h  RiskManager.cpp  RiskManager.h
src/tax/: TaxReporter.cpp  TaxReporter.h
src/trading/: OrderManagement.cpp  OrderManagement.h  PaperTrading.cpp  PaperTrading.h  TradeHistory.cpp  TradeHistory.h  TradeMarker.cpp  TradeMarker.h
src/ui/: AppGui.cpp  AppGui.h  Dashboard.cpp  Dashboard.h  DrawingTools.cpp  DrawingTools.h  LayoutManager.cpp  LayoutManager.h  MultiTimeframe.cpp  MultiTimeframe.h
tests/: test_ai_engine.cpp  test_candle_cache.cpp  test_exchanges.cpp  test_features.cpp  test_full_system.cpp  test_indicators.cpp  test_logger.cpp  test_modules.cpp  test_regression_part1.cpp  test_regression_part2.cpp  test_regression_part3.cpp  test_risk.cpp  test_system.cpp  test_trading_db.cpp  test_v170.cpp
tools/: generate_icon.py
user_indicator/: README.md  Script_v260.pine
web-version/: ARCHITECTURE.md  ENHANCED_FEATURES.md  GETTING_STARTED.md  INSTALLATION_SCRIPTS_RU.md  README.md  WINDOWS_INSTALLATION_RU.md  docker-compose.yml  install-docker.cmd  install-manual.cmd  install.cmd  install.ps1  start-all.cmd  stop-all.cmd
web-version-php/: DEMO.md  GITHUB_PAGES.md  INSTALLATION.md  README.md
web-version-php/backend/: .env.example  composer.json
web-version-php/backend/config/: config.php  database.php
web-version-php/backend/public/: index.php
web-version-php/backend/src/api/: analysis.php  auth.php  market.php  trading.php
web-version-php/backend/src/auth/: Auth.php
web-version-php/backend/src/database/: Connection.php
web-version-php/backend/src/exchanges/: BaseExchange.php  BinanceExchange.php
web-version-php/backend/src/indicators/: Indicators.php
web-version-php/database/: schema.sql
web-version-php/frontend/: dashboard.html  demo.html  index.html
web-version-php/frontend/assets/css/: dashboard.css  main.css
web-version-php/frontend/assets/js/: api.js  chart.js  dashboard.js  demo.js  trading.js
web-version-php/ml-service/: pom.xml
web-version/backend/: .env.example  .gitignore  package.json  tsconfig.json
web-version/backend/prisma/: schema.prisma
web-version/backend/src/: server.ts
web-version/backend/src/analysis/: ChartAnalysis.ts  SignalGenerator.ts
web-version/backend/src/api/: admin.routes.ts  analysis.routes.ts  auth.routes.ts  exchange.routes.ts  routes.ts  trading.routes.ts  user.routes.ts
web-version/backend/src/auth/: AuthService.ts  InvitationService.ts
web-version/backend/src/config/: index.ts
web-version/backend/src/exchanges/: BaseExchange.ts  BinanceExchange.ts
web-version/backend/src/indicators/: Indicators.ts
web-version/backend/src/middleware/: auth.ts  errorHandler.ts  rateLimiter.ts
web-version/backend/src/utils/: encryption.ts  logger.ts  redis.ts
web-version/backend/src/websocket/: WebSocketManager.ts
web-version/docker/: backend.Dockerfile  frontend.Dockerfile  ml-service.Dockerfile
web-version/frontend/: .env.example  index.html  package.json
web-version/frontend/src/: App.tsx  theme.ts
web-version/frontend/src/components/: Layout.tsx
web-version/frontend/src/hooks/: useWebSocket.ts
web-version/frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  TradingPage.tsx
web-version/frontend/src/services/: api.ts  auth.service.ts
web-version/frontend/src/store/: index.ts
web-version/frontend/src/store/slices/: authSlice.ts  (+2 more)
web-version/ml-service/: requirements.txt
web-version/ml-service/app/: main.py
(+8 files in other folders)
